[workspace.package]
authors = ["Quantus Network Developers <hello@quantus.com>"]
edition = "2021"
homepage = "https://quantus.com/"
license = "MIT-0"
repository = "https://github.com/quantus-network/chain#"

[workspace]
members = [
	"client/cli",
	"client/consensus/qpow",
	"client/informant",
	"client/litep2p",
	"client/network",
	"client/network-sync",
	"client/network-types",
	"client/service",
	"client/transaction-pool",
	"frame/metadata",
	"frame/executive",
	"frame/try-runtime",
	"frame/support",
	"frame/support-procedural",
	"frame/support-procedural-tools",
	"frame/support-procedural-tools-derive",
	"miner-api",
	"node",
	"pallets/assets",
	"pallets/assets-holder",
	"pallets/balances",
	"pallets/conviction-voting",
	"pallets/frame-system",
	"pallets/mining-rewards",
	"pallets/multisig",
	"pallets/preimage",
	"pallets/qpow",
	"pallets/ranked-collective",
	"pallets/recovery",
	"pallets/referenda",
	"pallets/reversible-transfers",
	"pallets/scheduler",
	"pallets/timestamp",
	"pallets/transaction-payment",
	"pallets/transaction-payment-rpc",
	"pallets/transaction-payment-rpc-runtime-api",
	"pallets/treasury",
	"pallets/utility",
	"pallets/wormhole",
	"pallets/zk-tree",
	"primitives/consensus/qpow",
	"primitives/dilithium-crypto",
	"primitives/header",
	"primitives/scheduler",
	"primitives/wormhole",
	"qpow-math",
	"runtime",
]
resolver = "2"

[workspace.lints.clippy]
# Deny unwrap and panic in production code (runtime & pallets)
# Test code can opt-out using: #![allow(clippy::unwrap_used, clippy::panic)]
panic = "deny"
unwrap_used = "deny"
# Also deny expect_used for consistency
expect_used = "deny"

[workspace.dependencies]
# Miscellaneous
ahash = { version = "0.8.2" }
aquamarine = { version = "0.5.0" }
arbitrary = { version = "1.3.2" }
array-bytes = { version = "6.2.2", default-features = false }
assert_matches = { version = "1.5.0" }
async-channel = { version = "1.8.0" }
async-trait = { version = "0.1.85", default-features = false }
asynchronous-codec = { version = "0.6" }
binary-merkle-tree = { version = "16.1.0", default-features = false }
bitflags = { version = "1.3.2" }
bip39 = { version = "2.0.1", features = ["rand"], default-features = true, package = "parity-bip39" }
bs58 = { version = "0.5.1" }
bytes = { version = "1.4.0", default-features = false }
cfg-if = { version = "1.0" }
chrono = { version = "0.4.31" }
cid = { version = "0.11.1" }
clap = { version = "4.5.13" }
clatter = { version = "=1.1.0" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
criterion = { version = "0.5.1", default-features = false }
directories = { version = "5.0.1" }
derive-syn-parse = { version = "0.2.0" }
docify = { version = "0.2.9", default-features = false }
expander = { version = "2.2.1" }
frame-metadata = { path = "./frame/metadata", default-features = false }
frame-support-procedural = { path = "./frame/support-procedural" }
frame-support-procedural-tools = { path = "./frame/support-procedural-tools" }
frame-support-procedural-tools-derive = { path = "./frame/support-procedural-tools-derive" }
either = { version = "1.8.1", default-features = false }
enum-display = { version = "0.1.4" }
env_logger = { version = "0.11.5" }
environmental = { version = "1.1.4", default-features = false }
exit-future = { version = "0.2.0" }
fdlimit = { version = "0.3.0" }
fnv = { version = "1.0.6" }
foldhash = { version = "0.1.5", default-features = false }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
futures_ringbuf = { version = "0.4.0" }
hash-db = { version = "0.16.0", default-features = false }
hashbrown = { version = "0.15.3" }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "1.0.0" }
impl-trait-for-tuples = { version = "0.2.3" }
indexmap = { version = "2.9.0", features = ["std"] }
Inflector = { version = "0.11.4" }
ip_network = { version = "0.4.1" }
itertools = { version = "0.11" }
jsonrpsee = { version = "0.24.3" }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
lazy_static = { version = "1.5.0", default-features = false, features = [
	"spin_no_std",
] }
libc = { version = "0.2.158" }
linked-hash-map = { version = "0.5.6" }
linked_hash_set = { version = "0.1.4" }
log = { version = "0.4.22", default-features = false }
macro_magic = { version = "0.5.1", default-features = false }
memory-db = { version = "0.34.0", default-features = false }
mockall = { version = "0.13.1" }
multiaddr = { version = "0.17.0" }
multihash = { version = "0.17.0", default-features = false, features = ["identity", "sha2"] }
multistream-select = { version = "0.13.0" }
names = { version = "0.14.0", default-features = false }
network-interface = { version = "2.0.1" }
nohash-hasher = { version = "0.2.0" }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
once_cell = { version = "1.21.3" }
parking_lot = { version = "0.12.1", default-features = false }
partial_sort = { version = "0.2.0" }
paste = { version = "1.0.15", default-features = false }
pin-project = { version = "1.1.3" }
pretty_assertions = { version = "1.3.0" }
primitive-types = { version = "0.13.1", default-features = false }
proc-macro-warning = { version = "1.84.1", default-features = false }
prometheus = { version = "0.13.4", default-features = false }
proptest = { version = "1" }
prost = { version = "0.13.5" }
prost-build = { version = "0.14" }
quickcheck = { version = "1.0.3" }
quinn = { version = "0.11.9", default-features = false, features = ["bloom", "log", "runtime-tokio", "rustls-ring"] }
rand = { version = "0.8.5", default-features = false }
rcgen = { version = "0.13" }
regex = { version = "1.10.2" }
reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
rpassword = { version = "7.0.0" }
rstest = { version = "0.18" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sc-client-db = { version = "0.51.0", default-features = false }
sc-keystore = { version = "39.0.0", default-features = true }
sc-mixnet = { version = "0.25.0", default-features = true }
sc-tracing = { version = "44.0.0" }
scale-info = { version = "2.11.6", default-features = false }
schnellru = { version = "0.2.3" }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
serde_millis = { version = "0.1" }
serde_with = { version = "3.12.0", default-features = false, features = ["hex", "macros"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
simple-dns = { version = "0.11.0" }
smallvec = { version = "1.11.0", default-features = false }
socket2 = { version = "0.5.9", features = ["all"] }
sp-keystore = { version = "0.45.0", default-features = true }
sp-state-machine = { version = "0.49.0", default-features = false }
tempfile = { version = "3.8.1" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.45.0", default-features = false }
tokio-stream = { version = "0.1.14" }
tokio-test = { version = "0.4.4" }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots", "url"] }
tokio-util = { version = "0.7.13", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
trie-bench = { version = "0.42.0" }
trie-db = { version = "0.30.0", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
trie-standardmap = { version = "0.16.0" }
tt-call = { version = "1.0.9" }
uint = { version = "0.10.0" }
unsigned-varint = { version = "0.8.0", features = ["codec"] }
url = { version = "2.5.4" }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
void = { version = "1.0.2" }
wasm-timer = { version = "0.2.5" }
x509-parser = { version = "0.18.1" }
yamux = { version = "0.13.9" }
yasna = { version = "0.5.0" }
zeroize = { version = "1.7.0", default-features = false }

# Own dependencies
litep2p = { path = "./client/litep2p", default-features = false }
pallet-balances = { path = "./pallets/balances", default-features = false }
pallet-mining-rewards = { path = "./pallets/mining-rewards", default-features = false }
pallet-multisig = { path = "./pallets/multisig", default-features = false }
pallet-qpow = { path = "./pallets/qpow", default-features = false }
pallet-reversible-transfers = { path = "./pallets/reversible-transfers", default-features = false }
pallet-scheduler = { path = "./pallets/scheduler", default-features = false }
pallet-wormhole = { path = "./pallets/wormhole", default-features = false }
pallet-zk-tree = { path = "./pallets/zk-tree", default-features = false }
qp-dilithium-crypto = { path = "./primitives/dilithium-crypto", version = "0.4.0", default-features = false }
qp-header = { path = "./primitives/header", default-features = false }
qp-scheduler = { path = "./primitives/scheduler", default-features = false }
qp-wormhole = { path = "./primitives/wormhole", default-features = false }
qpow-math = { path = "./qpow-math", default-features = false }
quantus-miner-api = { path = "./miner-api", version = "0.2.0", default-features = false }
quantus-runtime = { path = "./runtime", default-features = false }
sc-consensus-qpow = { path = "./client/consensus/qpow", default-features = false }
sp-consensus-qpow = { path = "./primitives/consensus/qpow", default-features = false }

# Quantus network dependencies
qp-plonky2 = { version = "1.5.1", default-features = false }
qp-poseidon-core = { version = "2.1.0", default-features = false }
qp-rusty-crystals-dilithium = { version = "2.4.0", default-features = false }
qp-rusty-crystals-hdwallet = { version = "2.4.0" }
qp-wormhole-aggregator = { version = "3.0.0", default-features = false }
qp-wormhole-circuit = { version = "3.0.0", default-features = false }
qp-wormhole-circuit-builder = { version = "3.0.0", default-features = false }
qp-wormhole-inputs = { version = "3.0.0", default-features = false }
qp-wormhole-prover = { version = "3.0.0", default-features = false }
qp-wormhole-verifier = { version = "3.0.0", default-features = false }
qp-zk-circuits-common = { version = "3.0.0", default-features = false }

# polkadot-sdk dependencies
frame = { version = "0.14.0", package = "polkadot-sdk-frame", default-features = false }
frame-benchmarking = { version = "45.0.3", default-features = false }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-executive = { path = "./frame/executive", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-support = { path = "./frame/support", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { path = "./frame/try-runtime", default-features = false }
hickory-resolver = { version = "0.26.1" }
pallet-assets = { path = "./pallets/assets", default-features = false }
pallet-assets-holder = { path = "./pallets/assets-holder", default-features = false }
pallet-conviction-voting = { path = "./pallets/conviction-voting", default-features = false }
pallet-preimage = { path = "./pallets/preimage", default-features = false }
pallet-ranked-collective = { path = "./pallets/ranked-collective", default-features = false }
pallet-recovery = { path = "./pallets/recovery", default-features = false }
pallet-referenda = { path = "./pallets/referenda", default-features = false }
pallet-timestamp = { path = "./pallets/timestamp", default-features = false }
pallet-transaction-payment = { path = "./pallets/transaction-payment", default-features = false }
pallet-transaction-payment-rpc = { path = "./pallets/transaction-payment-rpc", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "./pallets/transaction-payment-rpc-runtime-api", default-features = false }
pallet-treasury = { path = "pallets/treasury", default-features = false }
pallet-utility = { path = "./pallets/utility", default-features = false }
prometheus-endpoint = { version = "0.17.7", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-block-builder = { version = "0.48.0", default-features = true }
sc-chain-spec = { version = "48.0.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-informant = { version = "0.54.0", default-features = false }
sc-network = { version = "0.55.1", default-features = false }
sc-network-common = { version = "0.52.0", default-features = false }
sc-network-light = { version = "0.54.0", default-features = false }
sc-network-sync = { version = "0.54.0", default-features = false }
sc-network-transactions = { version = "0.54.0", default-features = false }
sc-network-types = { version = "0.20.3", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-rpc = { version = "50.0.0", default-features = false }
sc-rpc-server = { version = "27.0.0", default-features = false }
sc-rpc-spec-v2 = { version = "0.55.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-sysinfo = { version = "46.0.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.1.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sc-utils = { version = "20.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-crypto-hashing-proc-macro = { version = "0.1.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-externalities = { version = "0.31.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-metadata-ir = { version = "0.12.1", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-panic-handler = { version = "13.0.2", default-features = true }
sp-rpc = { version = "37.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-staking = { version = "42.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
sp-tracing = { version = "19.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-transaction-storage-proof = { version = "40.0.0", default-features = false }
sp-trie = { version = "42.0.1", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
sp-weights = { version = "33.2.0", default-features = false }
static_init = { version = "1.0.4" }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-test-utils = { version = "3.0.0", default-features = false }
substrate-wasm-builder = { version = "31.1.0", default-features = false }

[patch.crates-io]
frame-storage-access-test-runtime = { path = "./patches/frame-storage-access-test-runtime" }
frame-metadata = { path = "./frame/metadata", default-features = false }
frame-support = { path = "./frame/support", default-features = false }
frame-support-procedural = { path = "./frame/support-procedural" }
frame-support-procedural-tools = { path = "./frame/support-procedural-tools" }
frame-support-procedural-tools-derive = { path = "./frame/support-procedural-tools-derive" }
frame-try-runtime = { path = "./frame/try-runtime", default-features = false }
frame-system = { path = "./pallets/frame-system" }
litep2p = { path = "./client/litep2p" }
sc-cli = { path = "./client/cli" }
sc-informant = { path = "./client/informant" }
sc-network = { path = "client/network" }
sc-network-sync = { path = "client/network-sync" }
sc-network-types = { path = "client/network-types" }
sc-service = { path = "client/service" }
sc-transaction-pool = { path = "client/transaction-pool" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

# Optimize build scripts and their dependencies in dev mode.
# This is critical for pallet-wormhole's build.rs which generates ZK circuits.
# Without this, circuit generation takes ~10 minutes instead of ~12 seconds.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
