[package]
name = "dilithium-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
rusty-crystals-dilithium.workspace = true
verify = { path = "./verify", default-features = false }
log = { workspace = true }
hdwallet = { path = "./hdwallet", default-features = false }
poseidon-resonance = { workspace = true }
thiserror = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
env_logger.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"hdwallet/std",
	"poseidon-resonance/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"thiserror"
]
full_crypto = [ # pass through for "sign" in pair trait.
	"sp-core/full_crypto",
]
serde = [
	"poseidon-resonance/serde",
	"sp-core/serde",
]
