[package]
authors.workspace = true
default-run = "eth-rpc"
description = "An Ethereum JSON-RPC server for pallet-revive."
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "pallet-revive-eth-rpc"
repository.workspace = true
version = "0.7.0"

[[bin]]
name = "eth-rpc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
codec = { workspace = true, features = ["derive"] }
dilithium-crypto = { workspace = true, default-features = true }
futures = { workspace = true, features = ["thread-pool"] }
git2 = "0.20.2"
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
log = { workspace = true }
pallet-revive.default-features = true
pallet-revive.workspace = true
poseidon-resonance = { workspace = true }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
rlp = { workspace = true }
sc-cli.default-features = true
sc-cli.workspace = true
sc-rpc.default-features = true
sc-rpc.workspace = true
sc-rpc-api.default-features = true
sc-rpc-api.workspace = true
sc-service.default-features = true
sc-service.workspace = true
serde_json = { workspace = true }
sp-arithmetic.default-features = true
sp-arithmetic.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-crypto-hashing.workspace = true
sp-rpc.default-features = true
sp-rpc.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
sp-weights.default-features = true
sp-weights.workspace = true
sqlx = { workspace = true, features = ["macros", "runtime-tokio", "sqlite"] }
subxt = { workspace = true, default-features = true, features = [
	"reconnecting-rpc-client",
] }
subxt-metadata.workspace = true
subxt-signer = { workspace = true, features = ["unstable-eth"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
env_logger = { workspace = true }
pallet-revive-fixtures = { default-features = true, workspace = true }
pretty_assertions = { workspace = true }
static_init = { workspace = true }
subxt-signer = { workspace = true, features = ["unstable-eth"] }

[build-dependencies]
git2 = { workspace = true }
