[package]
name = "miner-service"
version = "0.1.0"
edition = "2024"

[dependencies]
wtransport = "0.5.0"
tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "io-util", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread"] }
