[package]
name = "prover"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
plonky2 = { version = "0.1.1" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
lazy_static = "1.4.0"
hex = "0.4"
clap = "3.0"
rand = "0.8"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
]
