[package]
edition = "2021"
name = "qpow-math"
version = "0.1.0"

[dependencies]
hex = { workspace = true }
log = { version = "0.4.22", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
primitive-types = { version = "0.13.1", default-features = false }
qp-poseidon-core = { workspace = true }

[features]
default = ["std"]
std = [
	"primitive-types/std"
]
