[package]
authors.workspace = true
description = "Quantum Proof-of-Work math primitives for the Quantus Network"
edition.workspace = true
homepage.workspace = true
keywords = ["quantus-network", "qpow", "mining"]
license.workspace = true
name = "qpow-math"
repository.workspace = true
version = "0.1.0"

[dependencies]
hex = { workspace = true, features = ["alloc"] }
log = { version = "0.4.22", default-features = false }
primitive-types = { version = "0.13.1", default-features = false }
qp-poseidon-core = { workspace = true }

[dev-dependencies]
proptest = "1"

[features]
default = ["std"]
std = [
	"primitive-types/std",
]
