[package]
name = "litep2p"
description = "Post-quantum peer-to-peer networking library for Quantus Network"
version = "0.13.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Quantus-Network/chain"

[build-dependencies]
prost-build = "0.14"

[dependencies]
async-trait = { workspace = true }
bs58 = "0.5.1"
bytes = { workspace = true }
cid = "0.11.1"

futures = { workspace = true }
futures-timer = { workspace = true }
hickory-resolver = { workspace = true }
indexmap = { version = "2.9.0", features = ["std"] }
ip_network = { workspace = true }
libc = "0.2.158"
mockall = { workspace = true }
multiaddr = { workspace = true }
multihash = { workspace = true, features = ["std", "multihash-impl", "identity", "sha2", "sha3", "blake2b"] }
network-interface = "2.0.1"
parking_lot = { workspace = true }
pin-project = { workspace = true }
prost = "0.13.5"
rand = { workspace = true, features = ["std", "std_rng", "getrandom"] }
serde = { workspace = true }
sha2 = { workspace = true }
simple-dns = "0.11.0"
smallvec = { workspace = true }
# Noise protocol with post-quantum pqxx pattern (ML-KEM 768 / FIPS 203)
clatter = { workspace = true }
socket2 = { version = "0.5.9", features = ["all"] }
thiserror = "2.0.12"
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync", "parking_lot"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "io", "codec"] }
tracing = { workspace = true, features = ["log"] }
uint = "0.10.0"
unsigned-varint = { version = "0.8.0", features = ["codec"] }
url = "2.5.4"
x25519-dalek = { workspace = true }
x509-parser = { workspace = true }
yamux = { workspace = true }
yasna = { workspace = true }
zeroize = { workspace = true }
enum-display = "0.1.4"

# Post-quantum cryptography
qp-rusty-crystals-dilithium = { workspace = true }

# Websocket
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots", "url"], optional = true }

# QUIC with post-quantum TLS
quinn = { workspace = true, features = ["rustls-aws-lc-rs", "runtime-tokio"], optional = true }
rcgen = { workspace = true, features = ["aws_lc_rs"], optional = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, features = ["std", "aws-lc-rs"], optional = true }
rustls-pki-types = { workspace = true, optional = true }
rustls-post-quantum = { workspace = true, optional = true }
webpki = { workspace = true, optional = true }

# WebRTC
str0m = { version = "0.11.1", optional = true }

# Fuzzing
serde_millis = { version = "0.1", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
serde_json = { workspace = true, features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures_ringbuf = "0.4.0"
hex-literal = "1.0.0"

[features]
default = ["websocket", "quic"]
websocket = ["dep:tokio-tungstenite"]
quic = ["dep:webpki", "dep:quinn", "dep:rustls", "dep:rustls-pki-types", "dep:rustls-post-quantum", "dep:ring", "dep:rcgen"]
webrtc = ["dep:str0m"]
fuzz = ["serde/derive", "serde/rc", "bytes/serde", "dep:serde_millis", "cid/serde", "multihash/serde"]
# Compatibility feature - RSA support removed in favor of post-quantum Dilithium
rsa = []
