[package]
authors = [
	"Parity Technologies <admin@parity.io>",
	"Quantus Network Developers <hello@quantus.com>",
]
description = "Substrate network types with Dilithium support"
documentation = "https://docs.rs/sc-network-types"
edition = "2021"
homepage = "https://quantus.com/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-network-types"
repository = "https://github.com/quantus-network/chain"
version = "0.20.3"

[lib]
name = "sc_network_types"
path = "src/lib.rs"

[dependencies]
bs58 = "0.5.1"
bytes = { workspace = true }
litep2p = { workspace = true }
log = { workspace = true }
multiaddr = "0.18.1"
multihash = { version = "0.19.1", default-features = false }
qp-rusty-crystals-dilithium = { workspace = true }
rand = { workspace = true }
serde_with = { version = "3.12.0", default-features = false, features = ["hex", "macros"] }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
quickcheck = "1.0.3"
