[package]
authors.workspace = true
description = "Substrate network protocol"
documentation = "https://docs.rs/sc-network"
edition.workspace = true
homepage.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-network"
readme = "README.md"
repository.workspace = true
version = "0.51.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
harness = false
name = "notifications_protocol"

[[bench]]
harness = false
name = "request_response_protocol"

[dependencies]
array-bytes = { workspace = true, default-features = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
asynchronous-codec = { workspace = true }
bytes = { workspace = true, default-features = true }
cid = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
either = { workspace = true, default-features = true }
fnv = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
ip_network = { workspace = true }
libp2p = { features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "request-response", "tcp", "tokio", "websocket", "yamux"], workspace = true }
libp2p-identity = { workspace = true, features = ["dilithium"] }
linked_hash_set = { workspace = true }
log = { workspace = true, default-features = true }
mockall = { workspace = true }
parking_lot = { workspace = true, default-features = true }
partial_sort = { workspace = true }
pin-project = { workspace = true }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
prost = { workspace = true }
rand = { workspace = true, default-features = true }
sc-client-api.default-features = true
sc-client-api.workspace = true
sc-network-common.default-features = true
sc-network-common.workspace = true
sc-network-types.default-features = true
sc-network-types.workspace = true
sc-utils.default-features = true
sc-utils.workspace = true
schnellru = { workspace = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
smallvec = { workspace = true, default-features = true }
sp-arithmetic.default-features = true
sp-arithmetic.workspace = true
sp-blockchain.default-features = true
sp-blockchain.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
thiserror = { workspace = true }
tokio = { features = ["macros", "sync"], workspace = true, default-features = true }
tokio-stream = { workspace = true }
unsigned-varint = { features = ["asynchronous_codec", "futures"], workspace = true }
void = { workspace = true }
wasm-timer = { workspace = true }
zeroize = { workspace = true, default-features = true }

[dev-dependencies]
assert_matches = { workspace = true }
multistream-select = { workspace = true }
tempfile = { workspace = true }
tokio = { features = ["macros", "rt-multi-thread"], workspace = true, default-features = true }
tokio-util = { features = ["compat"], workspace = true }

criterion = { workspace = true, default-features = true, features = ["async_tokio"] }

[build-dependencies]
prost-build = { workspace = true }
